# python-fastapi

./: .env.example  LICENSE  README.md  README_FASTAPI.md  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml
iac/ci/: README.md  deploy_ci.sh  test-workflow.yml
src/app/: __init__.py  auth copy.py  auth.py  config.py  main.py  schemas.py
tests/: conftest.py  test_auth.py  test_main.py  test_protected.py
